erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | SELLER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    NOTES {
        INT note_id PK
        INT seller_id FK
        VARCHAR title
        TEXT description
        DECIMAL price
        DECIMAL overall_rating
        VARCHAR status "DRAFT | ACTIVE | TAKEN_DOWN"
    }
    TRANSACTION_ITEMS {
        INT item_id PK
        INT transaction_id FK
        INT note_id FK
        DECIMAL purchase_price
    }
    NOTE_LICENSES {
        INT license_id PK
        INT note_id FK
        INT user_id FK
        INT transaction_item_id FK
        DATETIME acquired_date
        VARCHAR status "ACTIVE | REVOKED | FROZEN"
    }

    USERS ||--o{ NOTE_LICENSES : owns
    NOTES ||--o{ NOTE_LICENSES : licensed_as
    TRANSACTION_ITEMS ||--|| NOTE_LICENSES : generates
